<resources>
    <string name="app_name">MasterProjet1</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_menu">ActivityMenu</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_modify_profile">ModifyProfileActivity</string>
    <string name="title_activity_leds_param">LEDsParamActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_creators">CreatorsActivity</string>
    <string name="title_activity_contact_form">ContactForm</string>
    <string name="title_activity_ankle_bracelet_parametrization">AnkleBraceletParametrization
    </string>
    <string name="adresse_mail_du_destinataire">adresse</string>
    <string name="subject">subject</string>
    <string name="Message">message</string>
    <string name="Email">email</string>
    <string name="Send_Email">sendemail</string>
    <string name="title_activity_historique">Historique</string>
    <string name="title_activity_new_course">NewCourse</string>
    <string name="title_activity_device_leds">DeviceActivity_LEDs</string>
    <string name="title_activity_leds">ActivityLEDs</string>
    <string name="title_activity_scan_leds">ScanActivity_LEDs</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>